kubernetes/deployment-myapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 3
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: ttl.sh/5792eba3-f8bb-4dc2-a96a-9e4cfb3954c3:24h
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
