kubernetes/svc-myapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: myapp
